# vwork

./: .reporter.example.toml  .vwork.example.toml  CLAUDE.md  DESIGN.md  README.md  cspell.json  package.json  tsconfig.json
.github/workflows/: release.yml
src/: config.ts  index.ts  update.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/auth/: anthropic.ts  atlassian.ts  callback.ts  github.ts  openai.ts  slack.ts  tokens.ts
src/chat/: loop.ts  prompt.test.ts  prompt.ts  report-intent.test.ts  report-intent.ts  session.ts  tools.ts
src/chat/tools/: bash.ts  computer.test.ts  computer.ts  file.ts  glob.ts  grep.ts  index.ts  report-schedule.ts  reporter-generate-report.ts  (+4 more)
src/computer/: audit.test.ts  audit.ts  policy.test.ts  policy.ts  session.ts  types.ts
src/llm/: agent.ts  anthropic.ts  openai.ts  provider.ts
src/mcp/: catalog.ts  client.ts  config.ts  registry.ts
src/memory/: embeddings.ts  vectordb.ts
src/prompts/: select.ts
src/report/: memory.test.ts  memory.ts  prompt.ts  runner.ts  runs.test.ts  runs.ts  types.ts
src/schedule/: crontab.ts  notify.ts  store.ts
src/server/: index.ts
src/todo/: manager.test.ts  manager.ts  notebook.test.ts  notebook.ts  store.ts  types.ts
src/tui/: app.tsx  file-mentions.ts  header.tsx  input.tsx  markdown.ts  messages.tsx  multiline-input.tsx  todo-panel.tsx  tool-summary.ts  types.ts  use-file-search.ts
src/utils/: log.ts  readline.ts
src/web/: App.tsx  index.html  main.tsx  vite.config.ts
(+22 files in other folders)
