[package]
name = "vwork"
version = "0.1.5"
description = "VWork — AI-powered work assistant"
authors = ["VWork"]
edition = "2021"

[lib]
name = "vwork_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
